--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "Yash",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   }
 }
